Bug 470474 - "gDBView.hdrForFirstSelectedMessage doesn't work for cross folder saved searches in the standalone msg window" [r=Standard8,sr=bienvenu]