mailnews/base/src/nsMsgSearchDBView.cpp
@@ -1095,10 +1095,18 @@ nsMsgSearchDBView::GetHdrForFirstSelectedMessage(nsIMsgDBHdr **hdr)
 {
   NS_ENSURE_ARG_POINTER(hdr);
   PRInt32 index;
+
   if (!mTreeSelection)
-    return NS_ERROR_NULL_POINTER;
-  nsresult rv = mTreeSelection->GetCurrentIndex(&index);
-  NS_ENSURE_SUCCESS(rv,rv);
+  {
+    // We're in standalone mode, so use the message view index to get the header
+    // We can't use the key here because we don't have an m_db
+    index = m_currentlyDisplayedViewIndex;
+  }
+  else
+  {
+    nsresult rv = mTreeSelection->GetCurrentIndex(&index);
+    NS_ENSURE_SUCCESS(rv, rv);
+  }
 
   return GetMsgHdrForViewIndex(index, hdr);
 }
